moving and end game condition now possible

--- a/frontend/src/lang/de.json
+++ b/frontend/src/lang/de.json
@@ -14,7 +14,8 @@
   "player": {
     "white": "WEIẞ: {name}",
     "black": "SCHWARZ: {name}",
-    "wins": "\uD83D\uDC51\uD83D\uDC51\uD83D\uDC51Spieler {name} gewinnt\uD83D\uDC51\uD83D\uDC51\uD83D\uDC51",
+    "wins": "\uD83D\uDC51\uD83D\uDC51\uD83D\uDC51DU HAST GEWONNNEN!\uD83D\uDC51\uD83D\uDC51\uD83D\uDC51",
+    "loses": "Du hast verloren \uD83D\uDE14",
     "draw": "Untenschieden"
   },
   "undo": "UNDO",
