--- a/frontend/src/lang/en.json
+++ b/frontend/src/lang/en.json
@@ -105,7 +105,8 @@
       "invalid_arguments": "Invalid arguments for command (if you see this, please contact the server administrator).",
       "invalid_request": "Invalid request (if you see this, please contact the server administrator).",
       "server_error": "An error occurred on the server, please contact the administrator.",
-      "unknown_command": "Unknown command supplied (if you see this, please contact the server administrator)."
+      "unknown_command": "Unknown command supplied (if you see this, please contact the server administrator).",
+      "not_your_color": "Please select a piece of your own color."
     },
     "success": {
       "gamestate_valid": "Your provided game state was loaded successful",
